# azulerosadesktop

./: .gitignore  CMakeLists.txt  README.md  main.cpp
control/: dashboard_control.cpp  dashboard_control.h  form_product_control.cpp  form_product_control.h  layout_control.cpp  layout_control.h  main_product_control.cpp  main_product_control.h  mainwindow_control.cpp  mainwindow_control.h
model/: data_user.h  modelMiniTable.cpp  modelMiniTable.h  model_completer.cpp  model_completer.h  model_form_product.cpp  model_form_product.h  model_login.cpp  model_login.h  model_main_product.cpp  model_main_product.h  request.cpp  request.h
resources/: media.qrc
resources/Images/: active_menu.svgz  attention.svgz  box.svgz  bt_close.svgz  cam.svgz  cart.svgz  cash.svgz  clients.svgz  clients_info.svgz  dashboard.svgz  error.svgz  home.svgz  icon.svgz  icon_add.svgz  icon_add_active.svgz  icon_add_image.svgz  icon_edit.svgz  icon_edit_active.svgz  icon_password.svgz  icon_remove_image.svgz  icon_show_image.svgz  icon_user.svgz  logo.svgz  lupa.svgz  products.svgz  providers.svgz  success.svgz  tag.svgz
resources/Style/: buttons.qss  combobox.qss  dialog.qss  labels.qss  layout.qss  table.qss  text_edit.qss
view/: customshadow.cpp  customshadow.h  dashboard_view.cpp  dashboard_view.h  defaultComboBox.cpp  default_table.cpp  default_table.h  default_widgets.cpp  default_widgets.h  defaultsLabel.cpp  defaultsLabel.h  defaultsLineEdit.cpp  defaultsLineEdit.h  dialog_ui.cpp  dialog_ui.h  frame_side_menu.cpp  frame_side_menu.h  layout_view.cpp  layout_view.h  login_view.cpp  login_view.h  mainCategory.cpp  mainCategory.h  main_product_view.cpp  main_product_view.h  mainwindow_view.cpp  mainwindow_view.h  productForm.cpp  productForm.h  toolbar_view.cpp  toolbar_view.h  ui_mrichtextedit.h
widgets/: customshadow.cpp  defaultComboBox.cpp  defaultComboBox.h  default_table.cpp  default_table.h  default_widgets.cpp  default_widgets.h  defaultsLabel.cpp  defaultsLabel.h  defaultsLineEdit.cpp  defaultsLineEdit.h  mrichtextedit.cpp  mrichtextedit.h  mtextedit.cpp  ui_mrichtextedit.h
